<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.cardview.widget.CardView
        android:layout_marginTop="16dp"
        android:layout_width="380dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="689dp"
            android:background="@color/colorPrimaryDark">

            <ImageView
                android:id="@+id/qr_img_full"
                android:layout_width="111dp"
                android:layout_height="92dp"
                android:layout_marginTop="16dp"
                android:src="@drawable/ic_qr_generate"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.059"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/result_hint_text_view_full"
                android:layout_width="97dp"
                android:layout_height="19dp"
                android:layout_marginTop="164dp"
                android:fontFamily="@font/russo_one"
                android:text="@string/result_hint"
                android:textColor="@android:color/holo_purple"
                android:textSize="15sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.083"
                app:layout_constraintStart_toEndOf="@id/qr_img_full"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/result_text_view_full"
                android:layout_width="358dp"
                android:layout_height="467dp"
                android:fontFamily="@font/russo_one"
                android:gravity="center_horizontal"
                android:text="@string/result_hint"
                android:textColor="@android:color/white"
                android:textSize="20sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.903" />

            <TextView
                android:id="@+id/date_text_view_full"
                android:layout_width="96dp"
                android:layout_height="29dp"
                android:fontFamily="@font/russo_one"
                android:text="22.02.20"
                android:textColor="@android:color/white"
                android:textSize="15sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.88"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.048" />

            <TextView
                android:id="@+id/time_text_view_full"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/russo_one"
                android:gravity="center"
                android:text="21:40"
                android:textColor="@android:color/white"
                android:textSize="15sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.73"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.104" />

            <TextView
                android:id="@+id/date_label_tv"
                android:layout_width="93dp"
                android:layout_height="16dp"
                android:fontFamily="@font/russo_one"
                android:text="@string/date_hint_label"
                android:textColor="@android:color/holo_purple"
                android:textSize="15sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.505"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.047" />


            <TextView
                android:id="@+id/time_label_tv"
                android:layout_width="93dp"
                android:layout_height="16dp"
                android:fontFamily="@font/russo_one"
                android:text="@string/time_label"
                android:textColor="@android:color/holo_purple"
                android:textSize="15sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.505"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.104" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>